--- a/index.html
+++ b/index.html
@@ -11,26 +11,49 @@
     <h1 class="container">Random Form !</h1>
     <div class="form-container">
       <form class="form">
+        <div class="email-error error" aria-live="polite"></div>
         <div class="form-field">
           <label for="email">Email</label>
-          <input id="email" type="email" />
+          <input
+            id="email"
+            type="email"
+            minlength="10"
+            required
+            maxlength="20"
+          />
         </div>
 
+        <div class="country-error error" aria-live="polite"></div>
         <div class="form-field">
           <label for="country">Country</label>
-          <input id="country" type="text" />
+          <input id="country" type="text" required />
         </div>
 
+        <div class="zip-error error" aria-live="polite"></div>
         <div class="form-field">
           <label for="zip">Zip code</label>
-          <input id="zip" type="text" />
+          <input
+            id="zip"
+            type="text"
+            required
+            pattern="^\d{5}$"
+            maxlength=" 5"
+          />
         </div>
 
+        <div class="pw-error error" aria-live="polite"></div>
         <div class="form-field">
           <label for="password">Password</label>
-          <input id="password" type="password" />
+          <input
+            id="password"
+            type="password"
+            minlength="12"
+            required
+            maxlength="15"
+          />
         </div>
-        <button class="submit-btn">Submit</button>
+
+        <button id="submit-btn">Submit</button>
       </form>
     </div>
     <div class="congrats-message"></div>
